Fix user margin on mobile and tablet

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -141,7 +141,7 @@ main {
   position: relative;
   display: flex;
   flex-direction: column;
-  margin-bottom: 5.5rem;
+  margin-bottom: 3.5rem;
 }
 @media screen and (min-width: 32rem) {
   .user {
