--- a/src/sass/_block.sass
+++ b/src/sass/_block.sass
@@ -6,7 +6,7 @@
   position: relative
   display: flex
   flex-direction: column
-  margin-bottom: 5.5rem
+  margin-bottom: 3.5rem
   @include for-screen('tablet')
     grid-area: 1 / 1 / span 1 / span 2
   @include for-screen('small')
